My first configuration getting docker to work with the app and postgres, and persisting the database

--- a/optaweb-employee-rostering-standalone/src/main/resources/application.properties
+++ b/optaweb-employee-rostering-standalone/src/main/resources/application.properties
@@ -10,15 +10,22 @@ quarkus.swagger-ui.path=/swagger-ui.html
 # Datasource
 # - using an embedded in-memory DB: http://h2database.com/html/features.html#in_memory_databases
 # - not closing the DB automatically: http://h2database.com/html/features.html#closing_a_database
-quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:employeerostering;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
-quarkus.hibernate-orm.database.generation=drop-and-create
+# quarkus.datasource.db-kind=h2
+# quarkus.datasource.jdbc.url=jdbc:h2:mem:employeerostering;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
+# quarkus.hibernate-orm.database.generation=drop-and-create
+optaweb.generator.initial.data=EMPTY
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://host:5432/optaweb
+quarkus.datasource.username=postgres
+quarkus.datasource.password=optaweb-db
+quarkus.hibernate-orm.database.generation=update
 
 ########################
 # Production overrides
 ########################
 %postgres.quarkus.datasource.db-kind=postgresql
-%postgres.quarkus.datasource.jdbc.url=jdbc:postgresql://${DATABASE_HOST:postgresql}:5432/${DATABASE_NAME}
-%postgres.quarkus.datasource.username=${DATABASE_USER}
-%postgres.quarkus.datasource.password=${DATABASE_PASSWORD}
+%postgres.quarkus.datasource.jdbc.url=jdbc:postgresql://${DATABASE_HOST:host}:5432/${DATABASE_NAME:optaweb}
+%postgres.quarkus.datasource.username=${DATABASE_USER:postgres}
+%postgres.quarkus.datasource.password=${DATABASE_PASSWORD:optaweb-db}
 %postgres.quarkus.hibernate-orm.database.generation=update
