--- a/optaweb-employee-rostering-backend/src/main/resources/application.properties
+++ b/optaweb-employee-rostering-backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ quarkus.http.cors=true
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui.html
 
-# optaweb.generator.initial.data=EMPTY
+optaweb.generator.initial.data=EMPTY
 
 ########################
 # Local overrides
@@ -15,15 +15,15 @@ quarkus.swagger-ui.path=/swagger-ui.html
 # Datasource
 # - using an embedded in-memory DB: http://h2database.com/html/features.html#in_memory_databases
 # - not closing the DB automatically: http://h2database.com/html/features.html#closing_a_database
-quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:employeerostering;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
-quarkus.hibernate-orm.database.generation=drop-and-create
+# quarkus.datasource.db-kind=h2
+# quarkus.datasource.jdbc.url=jdbc:h2:mem:employeerostering;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
+# quarkus.hibernate-orm.database.generation=drop-and-create
 
-# quarkus.datasource.db-kind=postgresql
-# quarkus.datasource.jdbc.url=jdbc:postgresql://host:5432/optaweb
-# quarkus.hibernate-orm.database.generation=update
-# quarkus.datasource.username=postgres
-# quarkus.datasource.password=optaweb-db
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://host:5432/optaweb
+quarkus.hibernate-orm.database.generation=update
+quarkus.datasource.username=postgres
+quarkus.datasource.password=optaweb-db
 
 ########################
 # Production overrides
