Fix calendars not showing across months, and forced calendar action buttons to display

--- a/optaweb-employee-rostering-backend/src/main/resources/application.properties
+++ b/optaweb-employee-rostering-backend/src/main/resources/application.properties
@@ -20,7 +20,8 @@ optaweb.generator.initial.data=EMPTY
 # quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.jdbc.url=jdbc:postgresql://host:5432/optaweb
+# quarkus.datasource.jdbc.url=jdbc:postgresql://host:5432/optaweb
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/optaweb
 quarkus.hibernate-orm.database.generation=update
 quarkus.datasource.username=postgres
 quarkus.datasource.password=optaweb-db
