Reorganize scripts to make them more user friendly

--- a/optaweb-employee-rostering-backend/src/main/resources/application.properties
+++ b/optaweb-employee-rostering-backend/src/main/resources/application.properties
@@ -9,6 +9,9 @@ quarkus.swagger-ui.path=/swagger-ui.html
 
 optaweb.generator.initial.data=EMPTY
 
+# XML file for power tweaking, defaults to solverConfig.xml (directly under src/main/resources)
+# quarkus.optaplanner.solver-config-xml=org/.../maintenanceScheduleSolverConfig.xml
+
 ########################
 # Local overrides
 ########################
