--- a/optaweb-employee-rostering-frontend/package.json
+++ b/optaweb-employee-rostering-frontend/package.json
@@ -34,6 +34,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "uuid": "^7.0.2",
+    "xlsx": "^0.18.2",
     "yaml": "^1.7.2"
   },
   "scripts": {
